--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.1.1",
     "@types/jest": "24.0.15",
+    "@types/material-ui": "^0.21.6",
     "@types/node": "12.0.8",
     "@types/react-dom": "16.8.4",
     "@types/react-router": "^5.0.2",
@@ -12,6 +13,7 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-swipeable-views": "^0.13.3",
     "typescript": "3.5.2"
   },
   "scripts": {
@@ -37,6 +39,7 @@
   },
   "devDependencies": {
     "@types/react": "^16.8.22",
-    "@types/react-router-dom": "^4.3.4"
+    "@types/react-router-dom": "^4.3.4",
+    "@types/react-swipeable-views": "^0.13.0"
   }
 }
