--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-swipeable-views": "^0.13.3",
-    "typescript": "3.5.2"
+    "typescript": "3.5.2",
+    "babel-eslint": "10.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
