--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "babel-eslint": "10.0.1",
     "express": "^4.16.4",
     "react-scripts": "2.1.1",
     "ssl-express-www": "^3.0.3"
