--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "babel-eslint": "10.0.1",
     "express": "^4.16.4",
     "react-scripts": "2.1.1",
-    "ssl-express-www": "^3.0.3"
+    "ssl-express-www": "^3.0.3",
+    "babel-jest": "^24.8.0"
   },
   "devDependencies": {},
   "scripts": {
