--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "react-swipeable-views": "^0.13.3",
     "typescript": "3.5.2",
     "babel-eslint": "10.0.1",
-    "babel-jest": "^24.8.0"
+    "babel-jest": "^24.8.0",
+    "babel-loader": "8.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
