--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "express": "^4.16.4",
     "react-scripts": "2.1.1",
     "ssl-express-www": "^3.0.3",
-    "babel-jest": "^24.8.0"
+    "babel-jest": "^24.8.0",
+    "babel-loader": "8.0.5"
   },
   "devDependencies": {},
   "scripts": {
