--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "typescript": "3.5.2",
     "babel-eslint": "10.0.1",
     "babel-jest": "^24.8.0",
-    "babel-loader": "8.0.5"
+    "babel-loader": "8.0.5",
+    "eslint": "^5.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
