--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "babel-eslint": "10.0.1",
     "babel-jest": "^24.8.0",
     "babel-loader": "8.0.5",
-    "eslint": "^5.16.0"
+    "eslint": "^5.16.0",
+    "jest": "24.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
