--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "babel-jest": "^24.8.0",
     "babel-loader": "8.0.5",
     "eslint": "^5.16.0",
-    "jest": "24.7.1"
+    "jest": "24.7.1",
+    "webpack": "4.29.6"
   },
   "scripts": {
     "start": "react-scripts start",
