--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "babel-jest": "^24.8.0",
     "babel-loader": "8.0.5",
     "eslint": "^5.16.0",
-    "jest": "24.7.1"
+    "jest": "24.7.1",
+    "webpack": "4.29.6"
   },
   "devDependencies": {},
   "scripts": {
