--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.1.1",
-    "@types/jest": "24.0.15",
+    "@material-ui/icons": "^4.2.1",
     "@types/material-ui": "^0.21.6",
     "@types/node": "12.0.8",
     "@types/react-dom": "16.8.4",
@@ -14,13 +14,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-swipeable-views": "^0.13.3",
-    "typescript": "3.5.2",
-    "babel-eslint": "10.0.1",
-    "babel-jest": "^24.8.0",
-    "babel-loader": "8.0.5",
-    "eslint": "^5.16.0",
-    "jest": "24.7.1",
-    "webpack": "4.29.6"
+    "typescript": "3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
