--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@types/node": "12.0.8",
     "@types/react-dom": "16.8.4",
     "@types/react-router": "^5.0.2",
+    "dexie": "^2.0.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
