--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.1.1",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/lab": "^4.0.0-alpha.18",
     "@types/material-ui": "^0.21.6",
     "@types/node": "12.0.8",
     "@types/react-dom": "16.8.4",
