--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.1.1",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/lab": "^4.0.0-alpha.18",
+    "@material-ui/styles": "^4.2.1",
     "@types/material-ui": "^0.21.6",
     "@types/node": "12.0.8",
     "@types/react-dom": "16.8.4",
