--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@types/node": "12.0.8",
     "@types/react-dom": "16.8.4",
     "@types/react-router": "^5.0.2",
+    "clsx": "^1.0.4",
     "dexie": "^2.0.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
