--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@types/node": "12.0.8",
     "@types/react-dom": "16.8.4",
     "@types/react-router": "^5.0.2",
+    "@types/shortid": "0.0.29",
     "clsx": "^1.0.4",
     "dexie": "^2.0.4",
     "react": "^16.8.6",
@@ -18,6 +19,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-swipeable-views": "^0.13.3",
+    "shortid": "^2.2.15",
     "typescript": "3.5.2"
   },
   "scripts": {
