--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-swipeable-views": "^0.13.3",
+    "image-compressor.js": "^1.1.4",
     "shortid": "^2.2.15",
     "typescript": "3.5.2"
   },
