--- a/client/package.json
+++ b/client/package.json
@@ -7,18 +7,20 @@
     "@material-ui/icons": "^4.2.1",
     "@material-ui/lab": "^4.0.0-alpha.27",
     "@material-ui/styles": "^4.2.1",
+    "@types/lodash": "^4.14.149",
     "@types/node": "12.0.8",
     "@types/react-dom": "16.8.4",
     "@types/react-router": "^5.0.2",
     "@types/shortid": "0.0.29",
     "clsx": "^1.0.4",
     "dexie": "^2.0.4",
+    "image-compressor.js": "^1.1.4",
+    "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-swipeable-views": "^0.13.3",
-    "image-compressor.js": "^1.1.4",
     "shortid": "^2.2.15",
     "typescript": "3.5.2"
   },
