--- a/client/package.json
+++ b/client/package.json
@@ -14,14 +14,14 @@
     "@types/shortid": "0.0.29",
     "clsx": "^1.0.4",
     "dexie": "^2.0.4",
-    "firebase": "^7.8.1",
+    "firebase": "^7.18.0",
     "image-compressor.js": "^1.1.4",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.20",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-google-login": "^5.1.3",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.4.3",
     "react-swipeable-views": "^0.13.3",
     "shortid": "^2.2.15",
     "typescript": "3.5.2"
