--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
     "react-dom": "^16.8.6",
     "react-google-login": "^5.1.3",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "3.0.1",
     "react-swipeable-views": "^0.13.3",
     "shortid": "^2.2.15",
     "typescript": "3.5.2"
