--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,9 @@
     "@types/shortid": "0.0.29",
     "clsx": "^1.0.4",
     "dexie": "^2.0.4",
-    "firebase": "^7.18.0",
+    "firebase": "7.8.1",
     "image-compressor.js": "^1.1.4",
-    "lodash": "^4.17.20",
+    "lodash": "4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-google-login": "^5.1.3",
