--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "@types/shortid": "0.0.29",
     "clsx": "^1.0.4",
     "dexie": "^2.0.4",
-    "firebase": "^7.18.0",
+    "firebase": "7.8.1",
     "image-compressor.js": "^1.1.4",
     "lodash": "^4.17.20",
     "react": "^16.8.6",
