--- a/package.json
+++ b/package.json
@@ -4,12 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "babel-jest": "^24.8.0",
-    "express": "^4.16.4",
-    "react-scripts": "2.1.1",
-    "ssl-express-www": "^3.0.3",
-    "webpack": "4.29.6",
-    "webpack-dev-server": "3.2.1"
+    "express": "^4.16.4"
   },
   "devDependencies": {},
   "scripts": {
