--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "react-scripts": "2.1.1",
+    "ssl-express-www": "^3.0.3"
   },
   "devDependencies": {},
   "scripts": {
