--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,13 @@
     "@material-ui/lab": "^4.0.0-alpha.42",
     "@material-ui/styles": "^4.9.0",
     "@types/lodash": "^4.14.149",
-    "@types/node": "12.0.8",
+    "@types/node": "^12.0.8",
     "@types/react-dom": "16.8.4",
     "@types/react-router": "^5.0.2",
     "@types/shortid": "0.0.29",
     "clsx": "^1.0.4",
     "dexie": "^2.0.4",
-    "firebase": "7.8.1",
+    "firebase": "^7.8.1",
     "image-compressor.js": "^1.1.4",
     "lodash": "^4.17.20",
     "react": "^16.8.6",
@@ -24,7 +24,7 @@
     "react-scripts": "^3.4.3",
     "react-swipeable-views": "^0.13.3",
     "shortid": "^2.2.15",
-    "typescript": "3.5.2"
+    "typescript": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
