--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.20",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-google-login": "^5.2.2",
     "react-google-one-tap-login": "^0.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.4.3",
