--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
     "@types/react": "^16.8.22",
     "@types/react-router-dom": "^4.3.4",
     "@types/react-swipeable-views": "^0.13.0"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
