--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.3",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.42",
-    "@material-ui/styles": "^4.9.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/lab": "^5.0.0-alpha.117",
+    "@mui/material": "^5.11.6",
+    "@mui/styles": "^5.11.2",
     "@types/lodash": "^4.14.149",
     "@types/node": "^12.0.8",
     "@types/react-dom": "16.8.4",
@@ -17,8 +19,8 @@
     "firebase": "^9.8.2",
     "image-compressor.js": "^1.1.4",
     "lodash": "^4.17.20",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^17.0.2",
+    "react-dom": "^16.14.0",
     "react-google-login": "^5.2.2",
     "react-google-one-tap-login": "^0.1.1",
     "react-router-dom": "^5.0.1",
